tests/ui/non_tuple_query.stderr
error[E0277]: the trait bound `u32: secs::query::Query<'_>` is not satisfied
 --> tests/ui/non_tuple_query.rs:6:11
  |
6 |     world.query::<u32>(|_, _| {});
  |           ^^^^^ the trait `secs::query::Query<'_>` is not implemented for `u32`
  |
  = help: the following other types implement trait `secs::query::Query<'a>`:
            (T, U)
            (T, U, V)
            (T, U, V, W)
            (T, U, V, W, X)
            (T,)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
